--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -1,33 +1,23 @@
 ---
 - hosts: all
   tasks:
-    # - name: increase key repeate speed
-    #   shell: defaults write NSGlobalDomain KeyRepeat -int 1
-
-    # - name: shorter delay until key repeat
-    #   shell: defaults write NSGlobalDomain InitialKeyRepeat -int 12
-
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link
       with_items:
         - vimrc
         - vimrc.plugins
 
     - file: path=~/.config state=directory
-    - file: src=~/.vim dest=~/.config/nvim state=link
+    - file: path=~/.config/nvim state=directory
     - file: src=~/.vimrc dest=~/.config/nvim/init.vim state=link
 
     - file: path=~/.vim/undo state=directory
     - file: path=~/.vim/autoload state=directory
-    - get_url: url=https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim dest=~/.vim/autoload/plug.vim
+    - shell: curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vimcurl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
     - shell: nvim +PlugInstall! +qall
       ignore_errors: yes # because of the error: Output is not to a terminal
 
     - shell: yarn global add https://github.com/ramitos/jsctags.git
     - shell: yarn global add livedown
-    - shell: yarn global add neovim
-
-    # https://github.com/neovim/neovim/issues/2048#issuecomment-78045837
-    - shell: infocmp $TERM | sed 's/kbs=^[hH]/kbs=\\177/' > $TERM.ti && tic $TERM.ti && rm $TERM.ti
 
     - name: Install nvim-client for python for deoplete.nvim
       shell: pip install --upgrade neovim
