--- a/ansible/install_essential.yml
+++ b/ansible/install_essential.yml
@@ -12,7 +12,6 @@
     - file: path=/tmp/homebrew_install.rb state=absent
       when: brew_exists|failed
 
-    # brave and iterm
     - shell: |
         if ! [[ "$(eval "brew cask list | grep '^{{ item }}$'")" ]] ; then
           brew cask install {{ item }}
@@ -20,8 +19,6 @@
       with_items:
         - brave-browser
         - dropbox
-        - iterm2
-    - shell: "{{ curdir }}/iterm2/install-settings.sh || echo 'run in Terminal'"
 
     # oh my zsh
     - shell: echo $ZSH_VERSION
@@ -44,6 +41,9 @@
         - sqlite # for asdf python
         - yarn
         - 'neovim/neovim/neovim'
+
+    - shell: gpg --import {{ backup_path }}/gpg/private_exaspark@gmail.com.key
+    - shell: gpg --import-ownertrust {{ backup_path }}/gpg/ownertrust.txt
 
     # python
     - shell: asdf plugin-add python https://github.com/danhper/asdf-python.git
