--- a/kitty.conf
+++ b/kitty.conf
@@ -21,6 +21,7 @@ map kitty_mod+t new_tab_with_cwd
 
 map kitty_mod+enter new_window_with_cwd
 map kitty_mod+shift+enter next_layout
+map kitty_mod+w close_window
 
 map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
@@ -32,18 +33,37 @@ map kitty_mod+equal change_font_size all +1.0
 map kitty_mod+minus change_font_size all -1.0
 map kitty_mod+0     change_font_size all 0
 
+map alt+w no_op
+map ctrl+d no_op
 map kitty_mod+u no_op
 map kitty_mod+r no_op
 map kitty_mod+j no_op
 map kitty_mod+k no_op
-map kitty_mod+n no_op
-map kitty_mod+p no_op
+
+# VIM: jump up / down = ctrl + u / d
+map kitty_mod+u send_text all \x15
+map kitty_mod+d send_text all \x04
+
+# VIM: move lines up / down = ctrl + j / k
+map kitty_mod+j send_text all \x0A
+map kitty_mod+k send_text all \x0B
+
+# VIM: redo changes = ctrl + r
+map kitty_mod+r send_text all \x12
+
+# VIM: multi select = ctrl + n / p
+map kitty_mod+n send_text all \x0E
+map kitty_mod+p send_text all \x10
 
 # jump between words = esc + f / b
 map kitty_mod+left send_text all \x1b\x62
 map kitty_mod+right send_text all \x1b\x66
-# jump beginning / end of line = esc + f / b
+
+# jump beginning / end of line = ctrl + a / e
 map kitty_mod+shift+left send_text all \x01
 map kitty_mod+shift+right send_text all \x05
+
 # remove by words = esc + backspace
 map kitty_mod+backspace send_text all \x1b\x08
+
+map kitty_mod+shift+backspace send_text all \x15
