--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -46,4 +46,5 @@
         - vimrc
         - irbrc
 
+    - file: path=~/.config/kitty state=directory
     - file: src={{ curdir }}/kitty.conf dest=~/.config/kitty/kitty.conf state=link force=yes
