Install Heroku, DO, AWS CLI

--- a/ansible/install_cli_apps.yml
+++ b/ansible/install_cli_apps.yml
@@ -40,9 +40,14 @@
         - stern # kube logs
         - jq
         - sops
+        - doctl
+        - awscli
 
     # to avoid using flag --with-openssl-dir=/usr/local/opt/openssl
     - shell: brew link --force openssl
+
+    # heroku
+    - shell: brew tap heroku/brew && brew install heroku
 
     # services
     - shell: |
