Add asdf plugins idempotently

--- a/ansible/configure_java.yml
+++ b/ansible/configure_java.yml
@@ -1,5 +1,12 @@
 ---
 - hosts: all
   tasks:
-    - shell: asdf plugin-add java https://github.com/halcyon/asdf-java.git
+    - shell: |
+        if ! [[ "$(brew ls --versions jq)" ]] ; then
+          brew install jq
+        fi
+    - shell: |
+        if ! [[ "asdf plugin list | grep java" ]] ; then
+          asdf plugin-add java https://github.com/halcyon/asdf-java.git
+        fi
     - shell: "asdf install java {{ version }}"
