--- a/ansible/configure_elixir.yml
+++ b/ansible/configure_elixir.yml
@@ -1,9 +1,15 @@
 ---
 - hosts: all
   tasks:
-    - shell: asdf plugin-add erlang https://github.com/asdf-vm/asdf-erlang.git || echo ok
+    - shell: |
+        if ! [[ "asdf plugin list | grep erlang" ]] ; then
+          asdf plugin-add erlang https://github.com/asdf-vm/asdf-erlang.git
+        fi
     - shell: "asdf install erlang {{ otp }}.0"
     - shell: "asdf global erlang {{ otp }}.0"
-    - shell: asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git || echo ok
+    - shell: |
+        if ! [[ "asdf plugin list | grep elixir" ]] ; then
+          asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
+        fi
     - shell: "asdf install elixir {{ version }}-otp-{{ otp }}"
     - shell: "asdf global elixir {{ version }}-otp-{{ otp }}"
