Switch to ungoogled chromium

--- a/ansible/install_essential.yml
+++ b/ansible/install_essential.yml
@@ -28,7 +28,7 @@
           brew cask install {{ item }}
         fi
       with_items:
-        - brave-browser
+        - eloston-chromium
         - keeweb
         - dropbox
 
