--- a/ansible/install_cli_apps.yml
+++ b/ansible/install_cli_apps.yml
@@ -42,6 +42,7 @@
         - sops
         - doctl
         - awscli
+        - tidy-html5
 
     # to avoid using flag --with-openssl-dir=/usr/local/opt/openssl
     - shell: brew link --force openssl
