--- a/ansible/configure_elixir.yml
+++ b/ansible/configure_elixir.yml
@@ -2,13 +2,13 @@
 - hosts: all
   tasks:
     - shell: |
-        if ! [[ "asdf plugin list | grep erlang" ]] ; then
+        if ! [[ "$(asdf plugin list | grep erlang)" ]] ; then
           asdf plugin-add erlang https://github.com/asdf-vm/asdf-erlang.git
         fi
     - shell: "asdf install erlang {{ otp }}.0"
     - shell: "asdf global erlang {{ otp }}.0"
     - shell: |
-        if ! [[ "asdf plugin list | grep elixir" ]] ; then
+        if ! [[ "$(asdf plugin list | grep elixir)" ]] ; then
           asdf plugin-add elixir https://github.com/asdf-vm/asdf-elixir.git
         fi
     - shell: "asdf install elixir {{ version }}-otp-{{ otp }}"
