--- a/ansible/configure_ruby.yml
+++ b/ansible/configure_ruby.yml
@@ -2,10 +2,11 @@
 - hosts: all
   tasks:
     - shell: |
-        if ! [[ "asdf plugin list | grep ruby" ]] ; then
+        if ! [[ "$(asdf plugin list | grep ruby)" ]] ; then
           asdf plugin-add ruby https://github.com/asdf-vm/asdf-ruby.git
         fi
     - shell: "asdf install ruby {{ version }}"
+    - shell: "asdf global ruby {{ version }}"
 
     - name: Install bundler
       shell: gem install bundler
