--- a/ansible/configure_node.yml
+++ b/ansible/configure_node.yml
@@ -2,12 +2,12 @@
 - hosts: all
   tasks:
     - shell: |
-        if ! [[ "asdf plugin list | grep nodejs" ]] ; then
+        if ! [[ "$(asdf plugin list | grep nodejs)" ]] ; then
           asdf plugin-add nodejs https://github.com/asdf-vm/asdf-nodejs.git
         fi
     - shell: |
-        if ! [[ "$(eval "brew cask list | grep '^gpg-suite$'")" ]] ; then
-          brew cask install gpg-suite
+        if ! [[ "$(eval "brew list --cask | grep '^gpg-suite$'")" ]] ; then
+          brew install --cask gpg-suite
         fi
     - shell: bash ~/.asdf/plugins/nodejs/bin/import-release-team-keyring
     - shell: "asdf install nodejs {{ version }}"
