--- a/ansible/configure_vim.yml
+++ b/ansible/configure_vim.yml
@@ -20,5 +20,5 @@
     - shell: yarn global add neovim
 
     - name: Install nvim-client for python for deoplete.nvim
-      shell: pip3 install --upgrade neovim
+      shell: pip3 install --upgrade neovim pynvim
       become: true # should be installed via sudo
