Install docker for mac through brew

--- a/ansible/install_gui_apps.yml
+++ b/ansible/install_gui_apps.yml
@@ -28,6 +28,7 @@
         - kitty
         - deluge
         - keybase
+        - docker
         # - keycastr # show keystrokes
         # - sqlitebrowser
         # - skype
