--- a/kitty.conf
+++ b/kitty.conf
@@ -40,16 +40,13 @@ map kitty_mod+r no_op
 map kitty_mod+j no_op
 map kitty_mod+k no_op
 
-# VIM: jump up / down = ctrl + u / d
-map kitty_mod+u send_text all \x15
-map kitty_mod+d send_text all \x04
+# https://donsnotes.com/tech/charsets/ascii.html#cntrl
 
-# VIM: move lines up / down = ctrl + j / k
+# VIM: move between windows = ctrl + j / k / h / l
 map kitty_mod+j send_text all \x0A
 map kitty_mod+k send_text all \x0B
-
-# VIM: redo changes = ctrl + r
-map kitty_mod+r send_text all \x12
+map kitty_mod+h send_text all \x08
+map kitty_mod+l send_text all \x0C
 
 # VIM: multi select = ctrl + n / p
 map kitty_mod+n send_text all \x0E
