--- a/kitty.conf
+++ b/kitty.conf
@@ -4,6 +4,7 @@ scrollback_lines 100000
 
 tab_bar_edge top
 url_style single
+detect_urls no
 
 active_border_color #757575
 inactive_border_color #2D2D2D
@@ -53,12 +54,12 @@ map kitty_mod+n send_text all \x0E
 map kitty_mod+p send_text all \x10
 
 # jump between words = esc + f / b
-map kitty_mod+left send_text all \x1b\x62
-map kitty_mod+right send_text all \x1b\x66
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
 
 # jump beginning / end of line = ctrl + a / e
-map kitty_mod+shift+left send_text all \x01
-map kitty_mod+shift+right send_text all \x05
+map kitty_mod+left send_text all \x01
+map kitty_mod+right send_text all \x05
 
 # remove by words = esc + backspace
 map kitty_mod+backspace send_text all \x1b\x08
