--- a/kitty.conf
+++ b/kitty.conf
@@ -6,6 +6,9 @@ tab_bar_edge top
 url_style single
 detect_urls no
 
+hide_window_decorations titlebar-only
+shell_integration no-title
+
 active_border_color #757575
 inactive_border_color #2D2D2D
 
