--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -9,7 +9,6 @@
     - file: path=~/.zsh state=directory
     - file: path=~/.zsh/custom state=directory
     - file: path=~/.gnupg state=directory
-    - file: path=~/.vim-snippets state=directory
     - file: src={{ curdir }}/{{ item }} dest=~/.{{ item }} state=link force=yes
       with_items:
         - asdfrc
@@ -21,10 +20,6 @@
         - gitconfig
         - gitignore
         - pryrc
-        - vim-snippets/coffee.snippets
-        - vim-snippets/html.snippets
-        - vim-snippets/javascript.snippets
-        - vim-snippets/ruby.snippets
         - zshenv
         - zshrc
         - zsh/custom/aliases.zsh
@@ -48,8 +43,5 @@
     - file: path=~/.config/kitty state=directory
     - file: src={{ curdir }}/kitty.conf dest=~/.config/kitty/kitty.conf state=link force=yes
 
-    - file: path=~/.config/nvim state=directory
-    - file: src={{ curdir }}/coc-settings.json dest=~/.config/nvim/coc-settings.json state=link force=yes
-
-    - file: path=~/.config/coc/extensions state=directory
-    - file: src={{ curdir }}/coc-package.json dest=~/.config/coc/extensions/package.json state=link force=yes
+    - file: path=~/.config/karabiner state=directory
+    - file: src={{ curdir }}/karabiner.conf dest=~/.config/karabiner/karabiner.json state=link force=yes
