--- a/ansible/configure_node.yml
+++ b/ansible/configure_node.yml
@@ -9,6 +9,6 @@
         if ! [[ "$(eval "brew list --cask | grep '^gpg-suite$'")" ]] ; then
           brew install --cask gpg-suite
         fi
-    - shell: bash ~/.asdf/plugins/nodejs/bin/import-release-team-keyring
+    # - shell: bash ~/.asdf/plugins/nodejs/bin/import-release-team-keyring
     - shell: "asdf install nodejs {{ version }}"
     - shell: asdf global nodejs {{ version }}
