--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,38 @@
+background #ffffff
+foreground #000000
+cursor #b0b0b0
+selection_background #b4d5ff
+color0 #000000
+color8 #545753
+# red
+color1 #cc0000
+color9 #ef2828
+# green
+color2 #4e9a05
+color10 #8ae234
+# yellow
+color3 #c4a000
+color11 #fce94e
+# blue
+color4 #3464a4
+color12 #719ecf
+# violet
+color5 #74507a
+color13 #ad7ea7
+# turquoise
+color6 #05989a
+color14 #34e2e2
+# light
+color7 #d3d7cf
+color15 #ededec
+selection_foreground #ffffff
+
+font_family Fira Code Retina
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 font_size 13.0
+
 cursor_blink_interval 0
 scrollback_lines 100000
 
@@ -11,9 +45,6 @@ shell_integration no-title
 
 active_border_color #757575
 inactive_border_color #2D2D2D
-
-background #1C1C1C
-selection_background #FFFFFF
 
 enabled_layouts tall, stack
 
