--- a/kitty.conf
+++ b/kitty.conf
@@ -60,6 +60,7 @@ map kitty_mod+w close_window
 
 map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
+map kitty_mod+shift+b move_tab_backward
 
 map kitty_mod+f combine : show_scrollback : send_text all \x2F
 map kitty_mod+l combine : clear_terminal scrollback active : send_text normal,application \x0c
