--- a/kitty.conf
+++ b/kitty.conf
@@ -38,7 +38,10 @@ scrollback_lines 100000
 
 tab_bar_edge top
 url_style single
-detect_urls no
+
+# unmap left click for open link (easy miss click)
+mouse_map left click ungrabbed no-op
+mouse_map cmd+left click ungrabbed mouse_handle_click selection link prompt
 
 hide_window_decorations titlebar-only
 shell_integration no-title
