--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,4 @@
 {
-  "solargraph.commandPath": "~/.asdf/shims/solargraph"
+  "solargraph.commandPath": "~/.asdf/shims/solargraph",
+  "elixir.pathToElixirLS": "~/.config/coc/elixir-ls/release/language_server.sh"
 }
