Install Raycast and GH

--- a/ansible/install_gui_apps.yml
+++ b/ansible/install_gui_apps.yml
@@ -28,6 +28,7 @@
         - karabiner-elements
         - obsidian
         - syncthing
+        - raycast
         # - keybase
         # - google-cloud-sdk # gcloud
         # - keycastr # show keystrokes
