--- a/kitty.conf
+++ b/kitty.conf
@@ -66,7 +66,7 @@ map kitty_mod+shift+[ previous_tab
 map kitty_mod+shift+b move_tab_backward
 
 map kitty_mod+f combine : show_scrollback : send_text all \x2F
-map kitty_mod+l combine : clear_terminal scrollback active : send_text normal,application \x0c
+map ctrl+k send_text all printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
 
 map kitty_mod+equal change_font_size all +1.0
 map kitty_mod+minus change_font_size all -1.0
