--- a/ansible/install_gui_apps.yml
+++ b/ansible/install_gui_apps.yml
@@ -29,6 +29,7 @@
         - obsidian
         - syncthing
         - raycast
+        - bartender
         # - keybase
         # - google-cloud-sdk # gcloud
         # - keycastr # show keystrokes
