--- a/ansible/install_gui_apps.yml
+++ b/ansible/install_gui_apps.yml
@@ -15,7 +15,7 @@
         - keeweb
         - zoom
         - typora
-        - spectacle
+        - moom
         - osxfuse
         - insomnia
         - tableplus # sql GUI vs psequel
