--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -45,6 +45,6 @@
     - file: src={{ curdir }}/kitty.conf dest=~/.config/kitty/kitty.conf state=link force=yes
 
     - file: path=~/.config/karabiner state=directory
-    - file: src={{ curdir }}/karabiner.json dest=~/.config/karabiner/karabiner.json state=link force=yes
+    - copy: src={{ backup_path }}/karabiner.json dest=~/.config/karabiner/karabiner.json force=yes
 
     - file: src={{ backup_path }}/espanso.yml dest="~/Library/Application Support/espanso/match/base.yml" state=link force=yes
