--- a/ansible/configure_dotfiles.yml
+++ b/ansible/configure_dotfiles.yml
@@ -20,6 +20,7 @@
         - gitconfig
         - gitignore
         - pryrc
+        - rubocop.yml
         - zshenv
         - zshrc
         - zsh/custom/aliases.zsh
