--- a/bundle/config
+++ b/bundle/config
@@ -5,3 +5,6 @@ BUNDLE_JOBS: "4"
 BUNDLE_GEM__TEST: "rspec"
 BUNDLE_GEM__MIT: "true"
 BUNDLE_GEM__COC: "true"
+BUNDLE_GEM__CI: "github"
+BUNDLE_GEM__CHANGELOG: "true"
+BUNDLE_GEM__LINTER: "false"
