Use fzf in kitty for search, enable vim mode

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -55,23 +55,31 @@ macos_option_as_alt yes
 
 kitty_mod cmd
 
+# Windows
 map kitty_mod+t new_tab_with_cwd
-
 map kitty_mod+enter new_window_with_cwd
 map kitty_mod+shift+enter next_layout
 map kitty_mod+w close_window
-
 map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
 map kitty_mod+shift+b move_tab_backward
 
-map kitty_mod+f combine : show_scrollback : send_text all \x2F
+# Search with fzf
+map kitty_mod+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
+# Search with less "/"
+# map kitty_mod+f combine : show_scrollback : send_text all /
+
+# Clear
 map ctrl+k send_text all printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
 
+# Size
 map kitty_mod+equal change_font_size all +1.0
 map kitty_mod+minus change_font_size all -1.0
 map kitty_mod+0     change_font_size all 0
 
+# https://donsnotes.com/tech/charsets/ascii.html#cntrl
+
+# Clear bindings
 map alt+w no_op
 map ctrl+d no_op
 map kitty_mod+u no_op
@@ -79,27 +87,30 @@ map kitty_mod+r no_op
 map kitty_mod+j no_op
 map kitty_mod+k no_op
 
-# https://donsnotes.com/tech/charsets/ascii.html#cntrl
-
-# VIM: move between windows = ctrl + j / k / h / l
+# Vim: move between windows = ctrl (cmd) + j / k / h / l
 map kitty_mod+j send_text all \x0A
 map kitty_mod+k send_text all \x0B
 map kitty_mod+h send_text all \x08
 map kitty_mod+l send_text all \x0C
 
-# VIM: multi select = ctrl + n / p
+# Vim: multi select = ctrl (cmd) + n / p
 map kitty_mod+n send_text all \x0E
 map kitty_mod+p send_text all \x10
 
-# jump between words = esc + f / b
+# Terminal: jump between words = esc + f / b
 map alt+left send_text all \x1b\x62
 map alt+right send_text all \x1b\x66
 
-# jump beginning / end of line = ctrl + a / e
+# Terminal: jump beginning / end of line = ctrl (cmd) + a / e
 map kitty_mod+left send_text all \x01
 map kitty_mod+right send_text all \x05
 
-# remove by words = esc + backspace
+# Terminal: remove by words = esc + backspace
 map kitty_mod+backspace send_text all \x1b\x08
 
+# Terminal: remove the entire line
 map kitty_mod+shift+backspace send_text all \x15
+
+# Hide 120-char line and trailing whitespaces
+scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua" -c "setlocal colorcolumn=0 nolist" -c "map q :qa!<CR>"
+map kitty_mod+s show_scrollback
