--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,6 +35,7 @@ font_size 13.0
 
 cursor_blink_interval 0
 scrollback_lines 100000
+scrollback_pager less -i --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 tab_bar_edge top
 url_style single
@@ -64,10 +65,8 @@ map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
 map kitty_mod+shift+b move_tab_backward
 
-# Search with fzf
-map kitty_mod+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
-# Search with less "/"
-# map kitty_mod+f combine : show_scrollback : send_text all /
+# Search with less "?"
+map kitty_mod+f combine : show_scrollback : send_text all ?
 
 # Clear
 map ctrl+k send_text all printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
@@ -112,5 +111,5 @@ map kitty_mod+backspace send_text all \x1b\x08
 map kitty_mod+shift+backspace send_text all \x15
 
 # Hide 120-char line and trailing whitespaces
-scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua" -c "setlocal colorcolumn=0 nolist" -c "map q :qa!<CR>"
-map kitty_mod+s show_scrollback
+# scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua" -c "setlocal colorcolumn=0 nolist" -c "map q :qa!<CR>"
+# map kitty_mod+s show_scrollback
