Enable vim mode in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -35,7 +35,7 @@ font_size 13.0
 
 cursor_blink_interval 0
 scrollback_lines 100000
-scrollback_pager less -i --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager less --no-init -i --chop-long-lines --raw-control-chars +INPUT_LINE_NUMBER
 
 tab_bar_edge top
 url_style single
@@ -110,6 +110,5 @@ map kitty_mod+backspace send_text all \x1b\x08
 # Terminal: remove the entire line
 map kitty_mod+shift+backspace send_text all \x15
 
-# Hide 120-char line and trailing whitespaces
-# scrollback_pager nvim +"source $HOME/.config/kitty/vi-mode.lua" -c "setlocal colorcolumn=0 nolist" -c "map q :qa!<CR>"
-# map kitty_mod+s show_scrollback
+" Vim mode
+map kitty_mod+s pipe @screen_scrollback overlay nvim -R --cmd "let $VIM_TERM=1" -c "set filetype=scrollback" -c "map q :qa!<CR>" "+norm G"
