Add more aliases for k8s

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -39,6 +39,7 @@ scrollback_pager less --no-init -i --chop-long-lines --raw-control-chars +INPUT_
 
 tab_bar_edge top
 url_style single
+paste_actions confirm-if-large
 
 # unmap left click for open link (easy miss click)
 mouse_map left click ungrabbed no-op
