--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -51,7 +51,7 @@ shell_integration no-title
 active_border_color #757575
 inactive_border_color #2D2D2D
 
-enabled_layouts tall, stack
+enabled_layouts tall, vertical, stack
 
 macos_option_as_alt yes
 
@@ -60,7 +60,8 @@ kitty_mod cmd
 # Windows
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
-map kitty_mod+shift+enter next_layout
+map kitty_mod+shift+enter toggle_layout stack
+map kitty_mod+shift+r toggle_layout vertical
 map kitty_mod+w close_window
 map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
