Fix Kitty xterm issues with sshrc

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -34,7 +34,7 @@ bold_italic_font auto
 font_size 13.0
 
 cursor_blink_interval 0
-scrollback_lines 100000
+scrollback_lines -1
 scrollback_pager less --no-init -i --chop-long-lines --raw-control-chars +INPUT_LINE_NUMBER
 
 tab_bar_edge top
@@ -71,7 +71,7 @@ map kitty_mod+shift+b move_tab_backward
 map kitty_mod+f combine : show_scrollback : send_text all ?
 
 # Clear
-map ctrl+k send_text all printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
+map ctrl+k clear_terminal reset active 🍎
 
 # Size
 map kitty_mod+equal change_font_size all +1.0
